Optimize better for smaller and bigger screens -Layout the answers differently in wide screens -look nice and correct on small or narrow screens like iPhone5 and Galaxy fold

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 html{
-    background-color: rgb(255, 196, 196);
+    /* background-color: rgb(255, 196, 196); */
     user-select: none;
     height: 100%;
 }
@@ -33,19 +33,23 @@ body {
     background-color: var(--main-bg);
     /* font-family: 'IBM Plex Sans Hebrew', sans-serif; */
     font-family: sans-serif;
-    min-height: 550px;
+    /* min-height: 550px; */
+    /* min-height: 100%; */
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
 }
 
 #container {
-    height: 100%;
+    /* height: 100%; */
+    flex: 1;
     display: flex;
-    width: 550px;
+    width: 1000px;
     max-width: 100%;
     margin: auto;
     flex-direction: column;
-
-    border-width: 5px;
+    justify-content: space-between;
     box-shadow: 0 0 20px 1px var(--light-grey);
 }
 .header{
@@ -79,8 +83,6 @@ body {
     direction: rtl;
     margin: 2rem 1rem;
     display: flex;
-    flex: 1;
-    flex-basis: 0;
     justify-content: center;
     align-items: center;
     font-size: 2.0rem;
@@ -89,11 +91,11 @@ body {
 
 #answer-section {
     display: flex;
-    flex: 2;
-    flex-basis: 0;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    align-content: center;
+    padding: 0rem 4rem;
 }
 
 #quiz-summary-section{
@@ -115,18 +117,15 @@ body {
 
 }
 
-#summary-mistakes{
-
-}
-
 .hide{
     visibility: hidden;
 }
 
 
 .answer {
+    direction: rtl;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     border-radius: .2em;
     border: 2px solid var(--light-grey);
@@ -134,7 +133,6 @@ body {
 
     height: 56px;
     width: 320px;
-    margin: 4px 0px;
     padding-right: 1rem;
     font-size: 1.5rem;
     color: var(--text-color);
@@ -167,15 +165,13 @@ body {
 
 .answer-holder{
     position: relative;
+    margin: .2rem .5rem;
     display: flex;
-
+    max-width: 90vw;
 }
 
 .icon{
     position: absolute;
-    /* margin-left: 32px;
-    margin-top: -48px;
-    width: 32px; */
     z-index: 1;
     width: 32px;
     align-self: center;
@@ -185,12 +181,14 @@ body {
 .main-button {
     display: flex;
     justify-content: center;
-    align-self: center;
     align-items: center;
+
+    align-self: center;
     transition-duration: 0.2s;
 
     font-size: 1.5rem;
     min-height: 96px;
+    max-width: 90vw;
     width: 320px;
     height: 96px;
     color: var(--white);
@@ -287,7 +285,7 @@ body {
 }
 
 
- @media only screen and (min-width: 1200px) and (min-height: 900px){
+ @media only screen and (min-width: 1000px) and (min-height: 800px){
      body{
         zoom: 150%;
      }
